# copter_arm_robot

./: CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  copter.rviz  pid.perspective  pot_calibration.yaml
firmware/: CMakeLists.txt  fan_arduino.cpp
launch/: copter_arm_demo.launch  copter_arm_real.launch  copter_arm_sim.launch
src/: fan_hwiface.cpp
urdf/: copter_arm.urdf
